# commerce

./: .gitignore  AGENTS.md  LICENSE  README.md  WORKBUDDY.md  ecosystem.config.js
.claude/: settings.local.json
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/apps/agents/: router.py  store.py
backend/apps/analytics/: report_router.py  router.py
backend/apps/auth/: router.py
backend/apps/chat/: router.py
backend/apps/contact/: router.py
backend/apps/context/: router.py
backend/apps/knowledge/: router.py
backend/apps/products/: router.py
backend/apps/scraper/: package-lock.json  package.json  router.py  scraper.js
backend/apps/wiki/: router.py
backend/core/: ai_client.py  auth.py  cache.py  config.py  database.py
backend/data/: __init__.py  mock_analytics.py  mock_products.py
backend/data/scrapes/: amazon_products_2026-05-29.json  jd_products_2026-05-29.json  taobao_products_2026-05-29.json
backend/data/wiki/raw/documents/: ai-service-guide.md  company-intro.md  product-catalog.md
backend/models/: entities.py
backend/repositories/: agent.py  base.py  context.py  product.py
backend/scripts/: seed_products.py
backend/services/: agent_service.py  chat_service.py  report_service.py  skill_executor.py  skill_loader.py  skill_registry.py  tool_dispatcher.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_ai_client.py  test_chat.py  test_config.py
docs/: DATABASE-SCHEMA.md  DEPLOYMENT-NGINX.md  DESIGN-SYSTEM.md  焕美严选AI运营管理平台-产品介绍.md  焕美严选AI运营管理平台-编码规范.md  焕美严选AI运营管理平台规划方案.md  电商AI管理平台-编码规范.md  (+1 more)
(+100 files in other folders)
